--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.12.1",
     "framer-motion": "^12.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
